Small visual fixes - Give rows a white background so they look good when dragging. - Make course builder logo not word wrap. - Make announcements list show "no items" when empty. - Removed anomalous overrides of form field border colors 	Change on 2015/11/09 by nretallack <nretallack@google.com> ------------- Created by MOE: https://github.com/google/moe MOE_MIGRATED_REVID=107440938

--- a/coursebuilder/modules/core_ui/_static/list/list.css
+++ b/coursebuilder/modules/core_ui/_static/list/list.css
@@ -51,6 +51,13 @@ ul.gcb-list, ol.gcb-list {
 
 /*** Row ***/
 
+.gcb-list__row,
+.gcb-list > table > tbody > tr {
+  transition: background-color 200ms;
+  height: 36px;
+  background-color: white;
+}
+
 /* Stripes:
  *
  * This can be used in two ways.  Either apply gcb-list__row--dark-stripe to
@@ -61,12 +68,6 @@ ul.gcb-list, ol.gcb-list {
 .gcb-list--autostripe .gcb-list__row:nth-child(even),
 .gcb-list--autostripe > table > tbody > tr:nth-child(even) {
   background-color:#f9f9f9;
-}
-
-.gcb-list__row,
-.gcb-list > table > tbody > tr {
-  transition: background-color 200ms;
-  height: 36px;
 }
 
 /* Hover needs to beat stripes */
